tests/typing/bad/testfile-generics-2.rs
use std::ops::Add;

struct S {

}

fn f<T : Add> (x : T) -> T {
    x
}

fn main() {
    f(S {});
}